pkg/deps/testdata/ub/project/invalid/string-require.ub
project: {
  requires: {
    'github.com/x/y': 'v1.2.3'
  }
}
